--- a/templates/404.html
+++ b/templates/404.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE HTML5>
 <html>
     <head>
@@ -9,7 +10,7 @@
         <div id="content" class="container-fluid navbar-default">
             <div class="message invert">
                 404<br/>
-                Page Not Found
+                ${_('Page Not Found')}
             </div>
         </div>
     </body>
