--- a/templates/settings/plugins.html
+++ b/templates/settings/plugins.html
@@ -33,23 +33,23 @@
     <body>
         ${navbar}
         <div class="container-fluid">
-            <h1>Plugins</h1>
+            <h1>${_('Plugins')}</h1>
 
-            <h3>Added</h3>
+            <h3>${_('Added')}</h3>
             <form class="form-horizontal well" data-category="added">
                 <ul class="sortable">
                     ${render_plugins('added')}
                 </ul>
             </form>
 
-            <h3>Snatched</h3>
+            <h3>${_('Snatched')}</h3>
             <form class="form-horizontal well" data-category="snatched">
                 <ul class="sortable">
                     ${render_plugins('snatched')}
                 </ul>
             </form>
 
-            <h3>Finished</h3>
+            <h3>${_('Finished')}</h3>
             <form class="form-horizontal well" data-category="finished">
                 <ul class="sortable list-group">
                     ${render_plugins('finished')}
@@ -57,7 +57,7 @@
             </form>
 
             <div class="col-md-12 well">
-                See the for plugin instruction.
+                ${_('See the Wiki for plugin instruction.')}
                 <a href="https://github.com/nosmokingbandit/Watcher3/wiki/Plugins", target="_blank" rel="noopener">
                     <i class="mdi mdi-help-circle-outline"></i>
                 </a>
@@ -66,7 +66,7 @@
 
             <a id="save_settings" class="btn btn-success pull-right" onclick="save_settings(event, this)">
                 <i class="mdi mdi-content-save"></i>
-                Save Settings
+                ${_('Save Settings')}
             </a>
 
         </div>
@@ -83,8 +83,8 @@
                         </div>
                         <div class="modal-footer">
                             <div class="btn-group btn-group-justified">
-                                <a class="btn btn-default" data-dismiss="modal">Close</a>
-                                <a class="btn btn-success" onclick="save_plugin_conf(event, this)">Save Config</a>
+                                <a class="btn btn-default" data-dismiss="modal">${_('Close')}</a>
+                                <a class="btn btn-success" onclick="save_plugin_conf(event, this)">${_('Save Config')}</a>
                             </div>
                         </div>
                     </div>
