--- a/templates/head.html
+++ b/templates/head.html
@@ -1,6 +1,7 @@
 <title>Watcher</title>
 <meta content="noindex, nofollow" name="robots">
 <meta content="${url_base}" name="url_base">
+<meta content="${language}" name="language">
 <meta content="width=device-width,initial-scale=1" name="viewport">
 
 <link href="${url_base}/static/css/themes/${uitheme or 'Default'}.css?v=07.10" rel="stylesheet">
@@ -11,6 +12,7 @@
 <script src="${url_base}/static/js/lib/bootstrap.min.js?v=06.14" type="text/javascript"></script>
 <script src="${url_base}/static/js/lib/bootstrap-notify.min.js?v=06.15" type="text/javascript"></script>
 <script src="${url_base}/static/js/shared.js?v=08.01" type="text/javascript"></script>
+<script src="${url_base}/static/js/localization.js?v=08.01" type="text/javascript"></script>
 
 <textarea id="notifications_json" class="hidden">
     ${notifications}
